# programmers_notes

./: .gitignore  LICENSE  README.md
cmake/: CMakeLists.txt  UTestsConfig.h.in  python.cmake
emacs/: init.el
emacs/basic/: init.el  testrun.bat
emacs/basic/.emacs.d/: init.el
emacs/ext/.emacs.d/: init.el
emacs/ext/.emacs.d/site-lisp/: my-keyset-light.el
lang/cpp/: method_chaining.cpp  typename.cpp
lang/cpp/Streams/: input_iterator.cpp  iterator.cpp  sample.cpp
lang/cpp/args/: format.cpp  format_ex.cpp  oldargs.cpp  safe_printf.cpp  safe_printfs.cpp  safe_printfs_ex.cpp  sum.cpp  sumex.cpp
lang/cpp/auto/: autotest.cpp  autotest.cpp.html
lang/cpp/bsearch/: binary_search.h  test.cpp
lang/cpp/container/: pqueue.cpp
lang/cpp/copy/: copy.cpp  copy.plm  copy_sample.cpp  copy_sample_ext.cpp  noncopy_sample.cpp  protcopy_sample.cpp
lang/cpp/coroutine/: CMakeLists.txt  EnumerableMixin.h  fib.cpp  reader.cpp  readlines.cpp  text.txt  use_mixin.cpp
lang/cpp/coroutine/streams/: CMakeLists.txt  use_streams.cpp
lang/cpp/cpp1114/: auto.cpp  for.cpp  right.cpp
lang/cpp/move/: defaultmove.cpp  movableclass.cpp  movableclass_auto.cpp  movetest.cpp  prologue.cpp  protect.cpp
lang/cpp/op/: ComparableMixIn.h  point.cpp  point.h  point_eq.cpp  point_mixin.cpp  use_mixin.cpp
lang/cpp/sfinae/: floor.cpp  rational.cpp  times.cpp
lang/cs/: CurriedSample.cs
lang/cs/linq/: BinFileIo.cs  CatFile.cs  FindFile.cs  LazySample.cs  StdQueryOperators.cs
lang/js/c3/: c3_line_sample.js  c3_sample.html
lang/js/curry/: curry.js  curry_short.js  package.json
lang/js/hello/: index.js  package.json
lang/js/lodash/: lodash_sample.js  lodash_sample_short.js  lodash_use.html  normal1.js  normal2.js  package.json
lang/js/sample/: index.js  package.json
node/: events.js  hello.js  hello_debug.js
node/process_arg/: package.json  process_arg.js
node/stdmod/: events.js  path.js  path_sample.js  path_short.js  process_exit.js  process_kill.js  timer.js  url.js  url_short.js
node/stdmod/process_signal/: process_signal_kill.js  process_signal_rec.js  process_signal_rec2.js
